test: added blob transfer integration test (pre-provisioned)